src/test/deca/context/invalid/homemade/select_from_notclass.deca
// trying to select a field from something which is not a class

{
    int x = 3;
    int y = 5;
    print(x.y);
}